[package]
name = "imaged"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.10.0"
iced_aw = "0.7.0"
image = "0.24.7"
once_cell = "1.18.0"
rfd = "0.12.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "serde"] }
