[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
once_cell = "1.21.3"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "serde"] }
time = "0.3.35"
tokio = { version = "1", features = ["full"] }
